Bug 503428 - Caret-moved events missing from Thunderbird Subject field, r=surkov, port=MarcoZ, r=surkov, a1.9.2.9=dveditz